Fix tag alignment

--- a/src/App.css
+++ b/src/App.css
@@ -375,6 +375,7 @@ body {
   font-family: var(--font);
   transition: 0.3s;
   vertical-align: middle;
+  margin-right: 10px;
 }
 
 .exportButton:hover {
@@ -1833,6 +1834,21 @@ table {
   margin-bottom: 10px;
   user-select: none;
   transition: 0.2s;
+}
+
+.tagItem {
+  display: inline-block;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border: 1px solid var(--muted-text);
+  text-align: center;
+  border-radius: 20px;
+  margin-right: 10px;
+  user-select: none;
+  transition: 0.2s;
+  vertical-align: middle;
 }
 
 .tagsList li.selected {
